added the services section

--- a/src/components/component-styles.css
+++ b/src/components/component-styles.css
@@ -25,7 +25,13 @@ header > nav > a:hover{
 .background-color-white{
     background-color: white;
 }
-
+.section{
+    width: 100%;
+    max-height: 1000px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .section-1{ /* New section-1 */
     display: flex;
     background-color: white;
