--- a/src/components/component-styles.css
+++ b/src/components/component-styles.css
@@ -16,14 +16,20 @@ header > nav > a:hover{
 .background-color-dark-blue{
     background-color: #171741;
 }
+.background-color-white{
+    background-color: white;
+}
+.background-color-light-blue{
+    background-color: #6384ff;
+}
 .color-dark-blue{
     color: #171741;
 }
 .color-white{
     color: white;
 }
-.background-color-white{
-    background-color: white;
+.color-light-blue{
+    color: #6384ff;
 }
 .section{
     width: 100%;
