--- a/src/components/component-styles.css
+++ b/src/components/component-styles.css
@@ -28,6 +28,7 @@ header > nav > a:hover{
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 
 
@@ -228,6 +229,7 @@ h2, h3{
     /* padding-top: 0.7rem;
     overflow: hidden; /* Learn more about this property */
     position: relative; /* Learn more about this property */
+    border: 1px solid;
 }
 
 .accordion-link .remove-icon{
@@ -241,4 +243,8 @@ h2, h3{
     justify-content: center;
     align-items: center;
     color: white;
+}
+.faq{
+    padding-top: 15px;
+    padding-bottom: 60px;
 }
