--- a/src/components/component-styles.css
+++ b/src/components/component-styles.css
@@ -1,7 +1,5 @@
 header{margin-top: 0%;}
-
-header > nav {  margin-top: 0;}
-
+header > nav {margin-top: 0;}
 header > nav > a{
     float: right;
     margin-top: 5px;
@@ -10,9 +8,7 @@ header > nav > a{
     margin-left: 10px;
     text-decoration: none;
 }
-header > nav > a:hover{
-
-}
+header > nav > a:hover{}
 
 .background-color-dark-blue{background-color: #171741;}
 .background-color-white{background-color: white;}
@@ -31,12 +27,9 @@ header > nav > a:hover{
     flex-direction: column;
 }
 
-
 h2, h3{
     margin: 0%;
 }
-
-
 
 .section-1{ /* New section-1 */
     display: flex;
@@ -82,11 +75,14 @@ h2, h3{
 .mockup{
     display: flex;
     justify-content: center;
-    align-items: center;
 }
-.mockup > img{
-    width: 250px;
+.mockup-img{
     height: 250px;
+    width: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 15px;
 }
 .icon{
     width: 65px;
@@ -102,9 +98,6 @@ h2, h3{
     margin: 0px auto;
     padding: 20px 0;
 }
-#services > h1, #services > h2 {
-    border: 2px solid;
-}
 .main-logo-div{
     display: flex;
     justify-content: center;
@@ -115,33 +108,33 @@ h2, h3{
 }
 .inner-section{
     display: flex;
-    height: 350px;
+    max-height: 350px;
     width: 100%;
     align-items: center;
     justify-content: space-evenly;
-}
-.blue{
-    /* background-color: blue; */
-    border: 2px solid;
-}
-.red{
-    /* background-color: red; */
-    border: 2px solid;
+    /* border: 2px solid; */
 }
 
 .inner-column{
     height: 280px;
     width: 500px; 
     padding-right: 25px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+.text-to-left{
+    align-self: flex-start;
+}
+.justify-center{
+    justify-content: center;
 }
 .left{
-    /* background-color: yellow; */
     margin-left: 40px;
-    border: 2px solid;
 }
 .right{
     margin-right: 40px;
-    border: 2px solid;
 }
 .inner-column > p, .inner-column > h2{
     padding-left: 25px;
@@ -160,12 +153,11 @@ h2, h3{
 }
 .section-type-blue{
     display: flex;
-    /* background-color: green; */
     background-color: #6384ff;
     min-height: 300px; /* Utilizing min and max height in sections with inner-containers help the section automatically shrink or expand as the containers start wrapping down. */
     max-height: 2400px;
     width: 100%;
-    justify-content: space-around;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     flex-direction: row;
     padding: 50px 0;
@@ -194,6 +186,12 @@ h2, h3{
     margin-bottom: 0;
     color: white;
 }
+.shadowyBorderBox{
+    width: 300px;
+    height: 270px;
+    /* border: 1px solid black; */
+    border-radius: 8px;
+}
 .question-block{
     margin: 0px auto;
     width: 600px;
@@ -207,6 +205,7 @@ h2, h3{
     width: 600px;
     border: 1px solid;
     padding-left: 5px;
+    cursor: pointer;
 }
 
 .accordion-item {
@@ -229,7 +228,6 @@ h2, h3{
 }
 .answer{
     padding-left: 5px;
-    /* padding-top: 0.7rem;
     overflow: hidden; /* Learn more about this property */
     position: relative; /* Learn more about this property */
     border: 1px solid;
@@ -237,7 +235,14 @@ h2, h3{
     animation: answer 500ms ease-in-out;
     padding: 10px 5px;
 }
-
+.icon-sizer-40{
+    height: 40px;
+    width: 40px;
+}
+.icon-sizer-125{
+    height: 125px;
+    width: 125px;
+}
 .accordion-link .remove-icon{
 
 }
