--- a/src/components/Components-general-styles.css
+++ b/src/components/Components-general-styles.css
@@ -9,3 +9,7 @@
 .color-light-blue{color: #6384ff;}
 .color-red{color: #ff0000};
 .color-black{color: #0000};
+
+.text-align-center{
+    text-align: center;
+}
