--- a/src/components/Components-general-styles.css
+++ b/src/components/Components-general-styles.css
@@ -1,15 +1,28 @@
 .background-color-dark-blue{background-color: #171741;}
-.background-color-white{background-color: #ffff;}
+.background-color-white{background-color: #ffffff;}
 .background-color-light-blue{background-color: #6384ff;}
 .background-color-red{background-color: #ff0000;}
-.background-color-black{background-color: #0000;}
+.background-color-black{background-color: #000000;}
 
 .color-dark-blue{color: #171741;}
 .color-white{color: #ffff;}
 .color-light-blue{color: #6384ff;}
 .color-red{color: #ff0000};
-.color-black{color: #0000};
+.color-black{color: #000000};
 
 .text-align-center{
     text-align: center;
+}
+
+.align-content-center{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.section{
+    width: 100%;
+    min-height: 10vh;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
