--- a/src/components/component-styles.css
+++ b/src/components/component-styles.css
@@ -18,22 +18,19 @@ header > nav > a:hover{}
 .color-white{color: white;}
 .color-light-blue{color: #6384ff;}
 
-.section{
+/* .section{
     width: 100%;
     max-height: 1000px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-}
+} */
 
 .section-title-h2{
     font-size: 35px;
     padding: 0% 10%;
     text-align: center;
-}
-.section-title-h3{
-    
 }
 h2, h3{
     margin: 0%;
@@ -120,7 +117,6 @@ h2, h3{
     width: 100%;
     align-items: center;
     justify-content: space-evenly;
-    /* border: 2px solid; */
 }
 
 .inner-column{
@@ -242,26 +238,6 @@ h2, h3{
     animation-name: answer;
     animation: answer 500ms ease-in-out;
     padding: 10px 5px;
-}
-.icon-sizer-40{
-    height: 40px;
-    width: 40px;
-}
-.icon-sizer-125{
-    height: 125px;
-    width: 125px;
-}
-.accordion-link .remove-icon{
-
-}
-.footer{
-    width: 100%;
-    height: 100px;
-    background-color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
 }
 .faq{
     padding-top: 15px;
