--- a/src/components/FaqSection/styles.css
+++ b/src/components/FaqSection/styles.css
@@ -19,7 +19,7 @@
     padding: 1rem;
     box-shadow: .5rem 2px .5rem rgba(0,0,0,.1);
     max-width: 700px;
-    margin: 0 auto;
+    margin: 20px auto;
 }
 .accordion-link{
     color: rgba(255, 255n, 255, .8);
