--- a/src/components/BigIconTitleDescriptionRow/styles.css
+++ b/src/components/BigIconTitleDescriptionRow/styles.css
@@ -13,7 +13,6 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    opacity: 1;
 }
 .left{
     margin-left: 40px;
@@ -21,21 +20,34 @@
 .right{
     margin-right: 40px;
 }
-.animate-column{
-    /* animation-name: animateColumn; */
-
-    animation: 0.5s linear 0s slideIn;
+.animate-left-column{
+    animation: 0.3s ease-in 0s slideInLeft;
+}
+.animate-right-column{
+    animation: 0.3s ease-in 0s slideInRight;
 }
 .mockup{
     width: 250px;
     height: 250px;
 }
-@keyframes slideIn {
+@keyframes slideInLeft {
     from {
-        transform: translateX(-300px);
+        transform: translateX(-50px);
+        opacity: 0;
     }
     to {
         transform: translateX(0px);
+        opacity: 1;
+    }
+}
+@keyframes slideInRight {
+    from {
+        transform: translateX(50px);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0px);
+        opacity: 1;
     }
 }
 @media (max-width: 768px) {
