--- a/src/components/Subtitle/styles.css
+++ b/src/components/Subtitle/styles.css
@@ -3,3 +3,8 @@
     padding: 0% 10%;
     text-align: center;
 }
+@media (max-width: 768px){
+    .section-subtitle-h3{
+        font-size: 24px;
+    }
+}
