improved a lot of stuff

--- a/src/components/CtaSection/styles.css
+++ b/src/components/CtaSection/styles.css
@@ -1,14 +1,16 @@
 .button-to-center{
     text-align: center;
 }
-#cta-sec-title-padding{
+#cta-sec-title-box{
     padding: 0px 100px;
+    min-height: 100px;
 }
 @media (max-width: 768px){
     .cta-section{
         margin-top: -10vh;
     }
-    #cta-sec-title-padding{
+    #cta-sec-title-box{
         padding: 0px;
+        min-height: 150px;
     }
 }
