--- a/src/components/ImgTitleDescriptionRow/styles.css
+++ b/src/components/ImgTitleDescriptionRow/styles.css
@@ -14,10 +14,10 @@
     flex-direction: column;
     justify-content: center;
 }
-.left-text-right-img{
+.default{
 
 }
-.right-text-left-img{
+.reverse{
     flex-direction: row-reverse;
 }
 .left{
